--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
         <!-- TABLE -- empty after DOM loaded, JS fills dynamically -->
         <table id="table">
         </table>
+
+        <div id="credit">
+            <p>Copyright &#169 2020 Christopher Klix. All rights reserved</p>
+            <p>No official CS50 service - see <a href="https://github.com/ChristopherKlix/ascii50/" target="blank">GitHub</a> for more detail.</p>
+        </div>
     </div>
 </body>
 
