--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Linking css file -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/main.css">
 
     <!-- Linking main.js file -->
-    <script defer src="main.js"></script>
+    <script defer src="./js/main.js"></script>
 
     <!-- Favicon -->
-    <link rel="icon" href="ddb.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="./img/ddb.png" type="image/png" sizes="16x16">
 
     <!-- Website title -->
     <title>ASCII CS50</title>
@@ -34,7 +34,7 @@
             <div id="duck-wrapper">
                 <p id="copied">copied</p>
                 <p id="quark-put">'quark'</p>
-                <img id="duck" src="./ddb.png"/>
+                <img id="duck" src="./img/ddb.png"/>
             </div>
 
             <!-- grid-area: cmd -->
