--- a/web/public/index.html
+++ b/web/public/index.html
@@ -9,11 +9,17 @@
 
     <!-- Linking main.js file -->
     <script defer src="./js/main.js"></script>
+    <script defer src="./js/init.js"></script>
+    <script defer src="./js/duck.js"></script>
 
-    <!-- Favicon -->
+    <!-- Firebase -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script defer src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/7.20.0/firebase-analytics.js"></script>
+    <script defer src="./js/firebase.js"></script>
+
+    <!-- Favicon & Title -->
     <link rel="icon" href="./img/ddb.png" type="image/png" sizes="16x16">
-
-    <!-- Website title -->
     <title>ASCII CS50</title>
 </head>
 <body>
@@ -68,29 +74,4 @@
         </div>
     </div>
 </body>
-
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-analytics.js"></script>
-
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyBDMOpdkSXFjYBWYQEXFON2-gW7AOurduI",
-    authDomain: "ascii50.firebaseapp.com",
-    databaseURL: "https://ascii50.firebaseio.com",
-    projectId: "ascii50",
-    storageBucket: "ascii50.appspot.com",
-    messagingSenderId: "1015602244637",
-    appId: "1:1015602244637:web:9dd68b0a4585036295aaf4",
-    measurementId: "G-903BD665XJ"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-</script>
 </html>
