Changed Copyright to ASCII

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -68,9 +68,10 @@
         <table id="table">
         </table>
 
+        <!-- CREDIT -->
         <div id="credit">
-            <p>Copyright &#169 2020 Christopher Klix. All rights reserved</p>
-            <p>No official CS50 service - see <a href="https://github.com/ChristopherKlix/ascii50/" target="blank">GitHub</a> for more detail.</p>
+            <p>Copyright © 2020 Christopher Klix. All rights reserved</p>
+            <p>No official CS50 service - see <a href="https://github.com/ChristopherKlix/ascii50/" target="blank">GitHub</a> for more details.</p>
         </div>
     </div>
 </body>
