Added json js script

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/main.css">
 
     <!-- Linking main.js file -->
+    <script defer src="./js/json.js"></script>
     <script defer src="./js/main.js"></script>
     <script defer src="./js/init.js"></script>
     <script defer src="./js/duck.js"></script>
