--- a/web/public/index.html
+++ b/web/public/index.html
@@ -41,7 +41,7 @@
             <!-- grid-area: duck -->
             <div id="duck-wrapper">
                 <p id="copied">copied</p>
-                <p id="quark-put">'quark'</p>
+                <p id="quack-put">'quack'</p>
                 <img id="duck" src="./img/ddb.png"/>
             </div>
 
