--- a/web/public/index.html
+++ b/web/public/index.html
@@ -26,7 +26,7 @@
 
     <!-- Favicon & Title -->
     <link rel="icon" href="./img/ddb.png" type="image/png" sizes="16x16">
-    <title>ASCII CS50</title>
+    <title>ASCII50</title>
 </head>
 <body>
     <!-- WRAPPER -->
@@ -38,7 +38,7 @@
 
             <!-- grid-area: title -->
             <div id="title">
-                <h1>ASCII CS50</h1>
+                <h1>ASCII50</h1>
                 <p>73 72 33</p>
             </div>
 
@@ -58,14 +58,14 @@
                 </div>
             </div>
 
-            <!-- grid-area: copymode -->
-            <div id="copy-mode-wrapper">
-                <div id="copy-mode-label">
+            <!-- grid-area: navigation -->
+            <div id="nav-wrapper">
+                <div id="copy-tooltip">
                     <p>Click to copy</p>
                 </div>
-                <div id="copy-mode">
-                    <div id="copy-mode-int">0-127</div>
-                    <div id="copy-mode-char">128-255</div>
+                <div id="toggle-ascii-range-wrapper">
+                    <div id="btn-128">0-127</div>
+                    <div id="btn-256">128-255</div>
                 </div>
             </div>
         </div>
