--- a/web/public/index.html
+++ b/web/public/index.html
@@ -39,7 +39,7 @@
             <!-- grid-area: title -->
             <div id="title">
                 <h1>ASCII50</h1>
-                <p>73 72 33</p>
+                <p id="greeting">72 73 33</p>
             </div>
 
             <!-- grid-area: duck -->
@@ -58,7 +58,7 @@
                 </div>
             </div>
 
-            <!-- grid-area: navigation -->
+            <!-- grid-area: nav -->
             <div id="nav-wrapper">
                 <div id="copy-tooltip">
                     <p>Click to copy</p>
