--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,6 +6,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/main.css">
+    <!-- CSShake library -->
+    <link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
 
     <!-- JavaScript -->
     <!-- Exec JS after DOM has been fully loaded -->
