--- a/web/public/index.html
+++ b/web/public/index.html
@@ -13,14 +13,7 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- Exec JS after DOM has been fully loaded -->
-    <script defer src="./js/json.js"></script>
-    <script defer src="./js/clipboard.js"></script>
-    <script defer src="./js/duck.js"></script>
-    <script defer src="./js/command_line.js"></script>
-    <script defer src="./js/help.js"></script>
-    <script defer src="./js/table.js"></script>
     <!-- Init needs to be exec last -->
-    <!-- Calls all previously defined init functions -->
     <script defer src="./js/init.js"></script>
 
     <!-- Firebase -->
@@ -37,42 +30,8 @@
     <!-- WRAPPER -->
     <div id="wrapper">
 
-        <!-- HEADER -- grid -->
-        <!-- therefore HTML order is 'ignored' and rearranged by CSS -->
+        <!-- HEADER -- grid -- empty after DOM loaded, JS fills dynamically -->
         <div id="header">
-
-            <!-- grid-area: title -->
-            <div id="title">
-                <h1>ASCII50</h1>
-                <p id="greeting">72 73 33</p>
-            </div>
-
-            <!-- grid-area: duck -->
-            <div id="duck-wrapper">
-                <p id="copied">copied</p>
-                <p id="quack-put">'quack'</p>
-                <img id="duck" src="./img/ddb.png"/>
-            </div>
-
-            <!-- grid-area: cmd -->
-            <div id="command">
-                <p class="hint">Try typing 'hex' or 'uhm?'</p>
-                <div id="command-line-wrapper">
-                    <span>$</span>
-                    <input id="command-line" type="text" autofocus>
-                </div>
-            </div>
-
-            <!-- grid-area: nav -->
-            <div id="nav-wrapper">
-                <div id="copy-tooltip-wrapper">
-                    <p id="copy-tooltip">Click to copy</p>
-                </div>
-                <div id="toggle-ascii-range-wrapper">
-                    <div id="btn-128">0-127</div>
-                    <div id="btn-256">128-255</div>
-                </div>
-            </div>
         </div>
 
         <!-- TABLE -- empty after DOM loaded, JS fills dynamically -->
@@ -83,11 +42,8 @@
             </div>
         </div>
 
-        <!-- CREDIT -->
+        <!-- CREDIT -- empty after DOM loaded, JS fills dynamically -->
         <div id="credit">
-            <p>Try [dec] [hex] [help] [source] in the command-line.</p>
-            <p>Copyright © 2020 Christopher Klix. All rights reserved.</p>
-            <p>No official CS50 service - see <a href="https://github.com/ChristopherKlix/ascii50/" target="blank">GitHub Repo</a> for more details.</p>
         </div>
     </div>
 </body>
